auto_building/cloudformation/templates/sample.yml
Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: myvpc
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Public-subnet1
      VpcId:
        Ref: MyVPC
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.20.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Public-subnet2
      VpcId:
        Ref: MyVPC
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.30.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private-subnet1
      VpcId:
        Ref: MyVPC
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.40.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private-subnet2
      VpcId:
        Ref: MyVPC
  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: For a bastion server
      GroupName: bastiojn
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: bastion
      VpcId:
        Ref: MyVPC
  WebSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: For a web server
      GroupName: web
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: BastionSG
      Tags: 
        - Key: Name
          Value: web
      VpcId:
        Ref: MyVPC
  AppSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: For a application server
      GroupName: app
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId:
            Ref: WebSG
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: BastionSG
      Tags: 
        - Key: Name
          Value: app
      VpcId:
        Ref: MyVPC
  DbSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: For a database server
      GroupName: db
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 27017
          ToPort: 27017
          SourceSecurityGroupId:
            Ref: AppSG
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: BastionSG
      Tags: 
        - Key: Name
          Value: db
      VpcId:
        Ref: MyVPC

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: IGW
      VpcId:
        Ref: MyVPC
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVPC
      Tags:
        - Key: Name
          Value: public
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IGW
  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVPC
      Tags:
        - Key: Name
          Value: private
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IGW
  PublicSubnet1RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRT
      SubnetId:
        Ref: PublicSubnet1
  PublicSubnet2RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRT
      SubnetId:
        Ref: PublicSubnet2
  PrivateSubnet1RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRT
      SubnetId:
        Ref: PrivateSubnet1
  PrivateSubnet2RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRT
      SubnetId:
        Ref: PrivateSubnet2
  BastionSVR:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02354e95b39ca8dec
      InstanceType: t2.micro
      KeyName:
        Ref: KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - Ref: BastionSG
          SubnetId:
            Ref: PublicSubnet1
      Tags:
        - Key: Name
          Value: bastion
  DatabseSVR:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02354e95b39ca8dec
      InstanceType: t2.small
      KeyName:
        Ref: KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - Ref: DbSG
          SubnetId:
            Ref: PrivateSubnet1
      Tags:
        - Key: Name
          Value: db
  ApplicationTemplate:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02354e95b39ca8dec
      InstanceType: t2.small
      KeyName:
        Ref: KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - Ref: AppSG
          SubnetId:
            Ref: PrivateSubnet1
      Tags:
        - Key: Name
          Value: app
